feat: align inventory persistence and activity endpoints